tests/fsharp/typecheck/sigs/neg89.bsl

neg89.fsx(2,10,2,11): typecheck error FS0953: This type definition involves an immediate cyclic reference through an abbreviation

neg89.fsx(3,9,3,10): typecheck error FS0953: This type definition involves an immediate cyclic reference through an abbreviation

neg89.fsx(6,10,6,11): typecheck error FS0953: This type definition involves an immediate cyclic reference through an abbreviation

neg89.fsx(7,9,7,10): typecheck error FS0953: This type definition involves an immediate cyclic reference through an abbreviation

neg89.fsx(8,9,8,10): typecheck error FS0953: This type definition involves an immediate cyclic reference through an abbreviation
